--- a/src/main/resources/templates/views/patient/view.html
+++ b/src/main/resources/templates/views/patient/view.html
@@ -70,11 +70,11 @@
 	<div class="col-lg-4 col-md-4">
 		<div class="card">
 	    	<div class="header">
-            	<h4 class="title">Rendez-vous</h4>
+            	<h4 class="title">Rendez-vous à venir</h4>
 	        </div>
 	        <div class="content">
             	<ul class="list-unstyled team-members">
-            	{{#rendezVous}}
+            	{{#rendezVousFutur}}
                 	<li>
                     	<div class="row">
                         	<div class="col-xs-3">
@@ -98,7 +98,7 @@
 	                        </div>
 	                    </div>
 	                </li>	                
-            	{{/rendezVous}}
+            	{{/rendezVousFutur}}
 	            </ul>	            
 	            <div class="text-center">
 	                <button type="button" class="btn btn-info btn-fill btn-wd" data-toggle="modal" data-target="#modalRdvForm">Nouveau rendez-vous</button>
@@ -106,6 +106,42 @@
 	            <div class="clearfix"></div>
 	        </div>
 	    </div>
-	</div>	
+	</div>
+	<div class="col-lg-4 col-md-4">
+		<div class="card">
+	    	<div class="header">
+            	<h4 class="title">Historique des rendez-vous</h4>
+	        </div>
+	        <div class="content">
+            	<ul class="list-unstyled team-members">
+            	{{#rendezVousPasse}}
+                	<li>
+                    	<div class="row">
+                        	<div class="col-xs-3">
+                        		{{this.id}}
+	                        </div>
+	                        <div class="col-xs-4">
+	                            {{this.nomRendezVous}}
+	                            <br />
+	                            <span class="text-muted"><small>{{this.dateRendezVous}}</small></span>
+	                        </div>
+	                        <div class="col-xs-2">
+	                            {{#this.hasPaid}}
+	                            <i class="fa fa-check"></i>
+	                            {{/this.hasPaid}}
+								{{^this.hasPaid}}
+	                            <i class="fa fa-times"></i>
+								{{/this.hasPaid}}
+	                        </div>
+	                        <div class="col-xs-3 text-right">
+	                            <a href="/home/patient/{{patient.id}}/rdv-{{this.id}}"><button class="btn btn-sm btn-success btn-icon"><i class="fa fa-arrow-right"></i></button></a>
+	                        </div>
+	                    </div>
+	                </li>	                
+            	{{/rendezVousPasse}}
+	            </ul>
+	        </div>
+	    </div>
+	</div>
 {{>layout/ajax/formRdv}}
 {{>layout/footer}}
