--- a/src/main/resources/templates/views/patient/rdv.html
+++ b/src/main/resources/templates/views/patient/rdv.html
@@ -3,8 +3,8 @@
 		<div class="card">
 		    <div class="header">
 		        <h4 class="title">Rendez-vous</h4>
-            	<p class="category">Paiement : {{#rendezVous.hasPaid}}<i class="fa fa-check"></i>{{/rendezVous.hasPaid}}{{^rendezVous.hasPaid}}<i class="fa fa-times"></i>{{/rendezVous.hasPaid}}</p>
-            	<p class="category">Statut : {{#rendezVous.status}}<i class="fa fa-check"></i>{{/rendezVous.status}}{{^rendezVous.status}}<i class="fa fa-times"></i>{{/rendezVous.status}}</p>            	
+            	{{^newRdv}}<p class="category">Paiement : {{#rendezVous.hasPaid}}<i class="fa fa-check"></i>{{/rendezVous.hasPaid}}{{^rendezVous.hasPaid}}<i class="fa fa-times"></i>{{/rendezVous.hasPaid}}</p>{{/newRdv}}
+            	{{^newRdv}}<p class="category">Statut : {{#rendezVous.status}}<i class="fa fa-check"></i>{{/rendezVous.status}}{{^rendezVous.status}}<i class="fa fa-times"></i>{{/rendezVous.status}}</p>{{/newRdv}}       	
 		    </div>
 		    <div class="content">
 		        <form method="post">		
@@ -26,29 +26,37 @@
 		            <div class="row">
 		                <div class="col-md-12">
 		                    <div class="form-group">
+		                        <label>Libellé</label>
+		                        <input type="text" class="form-control border-input" placeholder="Libellé du rendez-vous" name="nomRdv" id="nomRdv" value="{{#rendezVous.nomRendezVous}}{{rendezVous.nomRendezVous}}{{/rendezVous.nomRendezVous}}" {{^newRdv}}readonly{{/newRdv}}>
+		                    </div>
+		                </div>
+		            </div>
+		
+		            <div class="row">
+		                <div class="col-md-12">
+		                    <div class="form-group">
 		                        <label>Date du rendez-vous</label>
-		                        <input type="date" class="form-control border-input" placeholder="Date du rendez-vous" name="dateRdv" id="dateRdv" value="{{rendezVous.dateRendezVous}}" readonly>
+		                        <input type="date" class="form-control border-input" placeholder="Date du rendez-vous" name="dateRdv" id="dateRdv" value="{{#rendezVous.dateRendezVous}}{{rendezVous.dateRendezVous}}{{/rendezVous.dateRendezVous}}" {{^newRdv}}readonly{{/newRdv}}>
 		                    </div>
 		                </div>
 		            </div>
 		            	
+		            {{^rendezVous.status}}
 		            <div class="row">
 		                <div class="col-md-12">
 		                    <div class="form-group">
 		                        <label>Creneau</label>
-		                       	<select class="form-control border-input" name="creneau" {{#rendezVous.status}}disabled{{/rendezVous.status}}>
+		                       	<select class="form-control border-input" name="creneau">
 		                       		{{#creneaux}}
 		                       			{{#value}}
 		                       			<option value={{key}}>{{key}}</option>
-		                       			{{/value}}
-		                       			{{^value}}
-		                       			<option value={{key}} disabled>{{key}}</option>
 		                       			{{/value}}
 		                       		{{/creneaux}} 
 		                       	</select>
 		                    </div>
 		                </div>
-		            </div>		            
+		            </div>
+		            {{/rendezVous.status}}        
 		
 		            <div class="row">
 		                <div class="col-md-12">
@@ -75,18 +83,23 @@
 		                	<a href="{{uri}}/paiement"><button type="button" class="btn btn-success btn-fill btn-wd">Enregistrer paiement</button></a>
 		                	{{/rendezVous.hasPaid}}
 	                	{{/rendezVous.status}}
-		                {{^rendezVous.status}}	                
+		                {{^rendezVous.status}}
+		                	{{^newRdv}}	                
 		                	<button type="button" class="btn btn-success btn-fill btn-wd">Cloturer rendez-vous</button>	                
 		                	<button type="button" class="btn btn-danger btn-fill btn-wd" id="annulerRdv">Annuler rendez-vous</button>
+		                	{{/newRdv}}
 	                	{{/rendezVous.status}}
 		            </div>
 		            <div class="clearfix"></div>
 		        </form>
 		    </div>
 		</div>
-	</div>	
+	</div>		
+	{{#ajoutOk}}
+	<input type="hidden" name="ajoutOk" id="ajoutOk" />
+	{{/ajoutOk}}
 	{{#notesOk}}
-	<input type="hidden" name="notesOk" value="{{notesOk}}" id="notesOk" />
+	<input type="hidden" name="notesOk" id="notesOk" />
 	{{/notesOk}}	
 	{{#paiementOk}}
 	<input type="hidden" name="paiementOk" value="{{paiementOk}}" id="paiementOk" />
