--- a/src/main/resources/templates/views/home.html
+++ b/src/main/resources/templates/views/home.html
@@ -1,5 +1,5 @@
 {{>layout/layout}}
-<h2 class="text-center">PsyTools</h2>
+<h2 class="text-center">Bonjour, <strong>{{praticien.prenom}} {{praticien.nom}}</strong> !</h2>
 	{{#loggedIn}}
 	    <input type="hidden" id="logged-in" value="loggedIn" />
 	{{/loggedIn}}
