--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -17,9 +17,9 @@
 				</a>
 			</li> -->
 			<li>
-				<a href="/home/finances" class="simple-text">
+				<a href="/home/dashboard" class="simple-text">
 					<i class="ti-bar-chart"></i>
-					<p>Finances</p>
+					<p>Tableau de bord</p>
 				</a>
 			</li>
 			<!-- <li>				
