--- a/src/main/resources/templates/views/auth/login.html
+++ b/src/main/resources/templates/views/auth/login.html
@@ -14,11 +14,11 @@
 				<p id="profile-name" class="profile-name-card"></p>
 				<!-- if login fail -->				
                	{{#login_fail}}
-                    <div class="alert alert-danger fade in out" role"=alert">
+                    <div class="alert alert-danger fade in out" role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
-                        <strong>login_fail</strong>
+                        <strong>{{login_fail}}</strong>
                     </div>		
                	{{/login_fail}}
 				<form class="form-login" action="login" method="post">
@@ -32,8 +32,8 @@
 				</div>
 			</div>
 		</div>
-		<script src="js/jquery-3.1.1.js"></script>
-		<script src="js/bootstrap.js"></script>
-		<script src="js/auth.js"></script>
+		<script src="js/jquery-3.1.1.js" type="text/javascript"></script>
+		<script src="js/bootstrap.js" type="text/javascript"></script>
+		<script src="js/auth.js" type="text/javascript"></script>
 	</body>
 </html>
