--- a/src/main/resources/templates/views/patient/view.html
+++ b/src/main/resources/templates/views/patient/view.html
@@ -11,13 +11,13 @@
 		                <div class="col-md-6">
 		                    <div class="form-group">
 		                        <label>Nom *</label>
-		                        <input type="text" class="form-control border-input" placeholder="Nom" name="nom" id="nom" value="{{patient.nom}}" readonly>
+		                        <input type="text" class="form-control border-input" placeholder="Nom" name="nom" id="nom" value="{{patient.nom}}">
 		                    </div>
 		                </div>
 		                <div class="col-md-6">
 		                    <div class="form-group">
 		                        <label>Prénom *</label>
-		                        <input type="text" class="form-control border-input" placeholder="Prénom" name="prenom" id="prenom" value="{{patient.prenom}}" readonly>
+		                        <input type="text" class="form-control border-input" placeholder="PrÃ©nom" name="prenom" id="prenom" value="{{patient.prenom}}">
 		                    </div>
 		                </div>
 		            </div>
@@ -26,7 +26,7 @@
 		                <div class="col-md-12">
 		                    <div class="form-group">
 		                        <label>Date de naissance *</label>
-		                        <input type="date" class="form-control border-input" placeholder="Date de naissance" name="dob" id="dob" value="{{patient.dateOfBirth}}" readonly>
+		                        <input type="date" class="form-control border-input" placeholder="Date de naissance" name="dob" id="dob" value="{{patient.dateOfBirth}}">
 		                    </div>
 		                </div>
 		            </div>
@@ -35,7 +35,22 @@
 		                <div class="col-md-12">
 		                    <div class="form-group">
 		                        <label>Adresse</label>
-		                        <input type="text" class="form-control border-input" placeholder="Adresse" name="adresse" id="adresse" value="{{patient.adresse}}" readonly>
+		                        <input type="text" class="form-control border-input" placeholder="Adresse" name="adresse" id="adresse" value="{{patient.adresse}}">
+		                    </div>
+		                </div>
+		            </div>
+		
+		            <div class="row">
+		                <div class="col-md-6">
+		                    <div class="form-group">
+		                        <label>Ville</label>
+		                        <input type="text" class="form-control border-input" placeholder="Ville" name="ville" id="ville" value="{{patient.ville}}">
+		                    </div>
+		                </div>
+		                <div class="col-md-6">
+		                    <div class="form-group">
+		                        <label>Code postal *</label>
+		                        <input type="text" class="form-control border-input" placeholder="Code postal" name="cp" id="cp" value="{{patient.codePostal}}">
 		                    </div>
 		                </div>
 		            </div>
@@ -44,13 +59,13 @@
 		                <div class="col-md-6">
 		                    <div class="form-group">
 		                        <label>Email *</label>
-		                        <input type="text" class="form-control border-input" placeholder="Adresse email" name="email" id="email" value="{{patient.email}}" readonly>
+		                        <input type="text" class="form-control border-input" placeholder="Adresse email" name="email" id="email" value="{{patient.email}}">
 		                    </div>
 		                </div>
 		                <div class="col-md-6">
 		                    <div class="form-group">
 		                        <label>Téléphone *</label>
-		                        <input type="text" class="form-control border-input" placeholder="Téléphone" name="phone" id="phone" value="{{patient.telephone}}" readonly>
+		                        <input type="text" class="form-control border-input" placeholder="Téléphone" name="phone" id="phone" value="{{patient.telephone}}">
 		                    </div>
 		                </div>
 		            </div>
@@ -59,12 +74,12 @@
 		                <div class="col-md-12">
 		                    <div class="form-group">
 		                        <label>Notes</label>
-		                        <textarea rows="5" class="form-control border-input" name="notes" id="notes" readonly>{{patient.note}}</textarea>
+		                        <textarea rows="5" class="form-control border-input" name="notes" id="notes">{{patient.note}}</textarea>
 		                    </div>
 		                </div>
 		            </div>
 		            <div class="text-center">
-		                <button type="submit" class="btn btn-info btn-fill btn-wd">Mettre à jour</button>
+		                <button type="submit" class="btn btn-info btn-fill btn-wd">Mettre à jour</button>
 		            </div>
 		            <div class="clearfix"></div>
 		        </form>
@@ -148,4 +163,7 @@
 	        </div>
 	    </div>
 	</div>
+	{{#patientOk}}
+	<input type="hidden" id="saveOk" />
+	{{/patientOk}}
 {{>layout/footer}}
